# DomainBed

./: pyproject.toml
domainbed/: algorithms.py  hparams_registry.py  networks.py
domainbed/scripts/: sensitivity.py  sweep.py  train.py  train_smac.py
