[project]
name = "domainbed"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "gdown==3.13.0",
    "imageio==2.9.0",
    "numpy>=1.22.4",
    "parameterized==0.9.0",
    "pillow>=10.3.0",
    "timm>=0.9.16",
    "torch==2.1.0",
    "torchvision>=0.13.1",
    "tqdm==4.66.4",
    "wilds==2.0.0",
]
